# kautos-creation

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
architecture/: Wireframe.md
src/: app.py  constants.py  events.py  generator.py  llm.py  notion.py  schemas.py
src/backend/: constants.py  events.py  generator.py  llm.py  schemas.py
src/ui/: complete_event_form.py  generate_event_in_range_form.py  generate_similar_event_form.py  output_display.py  sidebar.py
